--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "framer-motion": "^6.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-dotenv": "^0.1.3",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
