--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dotenv": "^0.1.3",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
+    "react-id-swiper": "^4.0.0",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
+    "swiper": "^8.2.4",
     "theme-switcher": "^1.0.2"
   },
   "devDependencies": {
