--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "npm run build && vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
@@ -16,7 +16,8 @@
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.7",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "vite-plugin-babel-macros": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
