--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "npm run build && vite preview"
+    "serve": "npm run build && vite preview",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src"
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
@@ -16,13 +18,15 @@
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.7",
-    "styled-components": "^5.3.5",
+    "styled-components": "^6.1.8",
     "vite-plugin-babel-macros": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.33.2",
     "vite": "^2.9.5"
   }
 }
